src/main/java/com/example/baekerrule/error/exception/NumberInputException.java
package com.example.baekerrule.error.exception;

public class NumberInputException extends RuntimeException {
    public NumberInputException(String msg) {
        super(msg);
    }
}
